--- a/style.css
+++ b/style.css
@@ -1,14 +1,83 @@
 h1 {
-	font-size: 72px;
-	text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 100px;
+    font-weight: lighter;
+    letter-spacing: 3px;
+    color: #D6D6D6;
 }
+
+h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 32px;
+    color: #526555;
+    margin: 15px;
+    font-weight: lighter;
+}
+
+h3 {
+	margin-top: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 40px;
+    font-weight: lighter;
+    letter-spacing: 3px;
+    color: black;
+    text-align: center;
+}
+
+h4 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 60px;
+    font-weight: lighter;
+    letter-spacing: 3px;
+    color: black;
+}
+
 
 p {
-	font-size: 32px;
-	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    color: #526555;
+    margin: 30px;
+    font-weight: lighter;
+    text-align: center;
 }
 
-.vl {
-	border-left: 2px solid green;
-    height: 100px;
+.button {
+  font-size: 24px;
+  text-align: center;
+  color: #fff;
+  background-color: #f8f9fa;
+  border: none;
 }
+
+.header {
+    text-align: center;
+    padding: 32px;
+}
+
+/* Create four equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    object-position: center;
+}
+
+.column img {
+    margin-top: 12px;
+}
+
+footer {
+background-color: #E6E6E6;
+color: white;
+text-align: center;
+}
+
+
+
+
+
+
+
+
+
