--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h4 {
     font-size: 60px;
     font-weight: lighter;
     letter-spacing: 3px;
-    color: black;
+    color: #0D2126;
 }
 
 
@@ -71,7 +71,46 @@ footer {
 background-color: #E6E6E6;
 color: white;
 text-align: center;
+margin-top: 20px;
 }
+
+ .card-header, th {
+     background-color: #f2f2f2;
+ }
+
+ th {
+ 	text-align: center;
+ }
+
+
+ table {
+     border: 1px solid #D6D6D6;
+     text-align: center;
+ }
+
+ img {
+     border-radius: 8px;
+     margin-bottom: 0px;
+     margin: 5px;
+     background-color: white;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ }
+
+ .form-control {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    color: white;
+    margin: 30px;
+    font-weight: lighter;
+    letter-spacing: 3px;
+    width: 70%;
+}
+
+
+
+
+
+
 
 
 
